--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,11 +12,9 @@ jobs:
       - name: Set up Ruby 3.0
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.0.x
           bundler-cache: true
+          ruby-version: 3.0.x
       - name: Install dependencies
         run: bundle install
-      - name: Run Rubocop
-        run: bundle exec rubocop
       - name: Run Tests
-        run: bundle exec rake
+        run: bundle exec rake test
