--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,13 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby 3.0
-        uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
+        uses: actions/setup-ruby@v1
         with:
-          bundler-cache: true
           ruby-version: 3.0.x
+          bundler-cache: true
       - name: Install dependencies
         run: bundle install
       - name: Run Rubocop
-        run: bundle exec rubocop
+        run: bundle exec rake lint
       - name: Run Tests
-        run: bundle exec rake test
+        run: bundle exec rake
